--- a/frontend/ecommerce/src/app/pages/perfil/perfil.component.html
+++ b/frontend/ecommerce/src/app/pages/perfil/perfil.component.html
@@ -77,6 +77,9 @@
                     <div class="col-md-6 mb-3">
                         <input type="tel" class="form-control" placeholder="Telefono">
                     </div>
+                    <div class="col-md-6 mb-3">
+                    <textarea class="form-control" placeholder="Descripción" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
                     <div class="form-row col-md-6">
                         <div class="form-group col-md-6">
                             <h6>Fecha nacimiento</h6>
@@ -85,8 +88,16 @@
                             <input class="form-control" type="date" name="fecha" min="1950-03-25" max="2002-01-01"  />
                         </div>
                     </div>
-                    <div class="col-md-6 mb-3">
-                        <button type="button" class="btn btn-primary btn-lx botones">Guardar Cambios</button>
+                    
+                    <div class="form-row col-md-6">
+                        <div class=" form-group col-md-6 mb-3">
+                            <button type="button" class="btn btn-primary btn-lx botones">Guardar Cambios</button>
+                            
+                        </div>
+                        <div class=" form-group col-md-6 mb-3">
+                            
+                            <button type="button" class="btn btn-primary btn-lx" routerLink='/usuario' > Cancelar</button>
+                        </div>
                     </div>
                     
 
