--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.css
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.css
@@ -329,3 +329,7 @@
   margin-left:-60px;
   margin-right:5%;
 }
+.form-control:focus {
+  border-color: #f3ab71 !important ;
+  box-shadow: 0 0 0 0.2rem rgba(255, 72, 0, 0.25);
+}
