--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -39,7 +39,7 @@
                       <li><a href="#"><img src="assets/icons/usuario.png" width="30px" alt=""></a>
                         <ul class="submenu">
                             <li><a routerLink="login">Inicia Sesion</a></li>
-                            <li><a routerLink="perfil">Perfil</a></li>
+                            <li><a routerLink="usuario" >Usuario</a></li>
                             <li><a routerLink="my_products">Mis Productos</a></li>
                         </ul>
                       </li>
