--- a/frontend/ecommerce/src/app/pages/perfil/perfil.component.css
+++ b/frontend/ecommerce/src/app/pages/perfil/perfil.component.css
@@ -54,3 +54,7 @@ font-size: .9rem;
     bottom: 0;
     right: 0;
 }
+.form-control:focus {
+    border-color: #f3ab71 !important ;
+    box-shadow: 0 0 0 0.2rem rgba(255, 72, 0, 0.25);
+  }
