--- a/frontend/ecommerce/src/app/pages/products/delete/delete.component.html
+++ b/frontend/ecommerce/src/app/pages/products/delete/delete.component.html
@@ -4,14 +4,17 @@
 
         <!-- Modal content-->
         <div class="modal-content">
+            <form action="">
             <div class="modal-header bg-danger">
                 <h4 class="modal-title text-center text-white">Eliminar Producto {{product.name}}</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body text-danger">
+                <input type="text"  name="id" [(ngModel)]='product.id' hidden>
                 <p>¿Desea eliminar este producto?</p>
-                <button class="btn btn-danger form-control" (click)="eraseproduct(1)">Eliminar</button>
+                <button class="btn btn-danger form-control" (click)="eraseproduct()">Eliminar</button>
             </div>
+        </form>
             <div class="modal-footer text-right">
                 <button type="button" class="form form-control texto" data-dismiss="modal">Cancelar</button>
             </div>
