--- a/frontend/ecommerce/src/app/pages/products/update/update.component.html
+++ b/frontend/ecommerce/src/app/pages/products/update/update.component.html
@@ -27,7 +27,7 @@
                                 </option>
                             </select>
                         </div>
-                        <input type="text" [(ngModel)]='productDetail.user_id' name="user_id">
+                        Usuario<input type="text"  [(ngModel)]='productDetail.user_id' name="user_id">
                         <div class="file-field form-group">
                             <div class="btn btn-outline-success btn-sm float-left form-control">
                                 <span>Imagenes &nbsp;</span>
@@ -35,10 +35,12 @@
                             </div>
                         </div> <br>
                         <hr>
+                        <input type="text"  hidden [(ngModel)]='productDetail.id ' name="id">
                         <div class="text-right">
-                            <button class="form form-control bg-success text-white" (click)="updateproduct(1)" >Actualizar</button>
+                            <button class="form form-control bg-success text-white" (click)="updateproduct()" >Actualizar</button>
                         </div>
                     </form>
+                    
             </div>
             <div class="modal-footer text-right">
                 <button type="button" class="form form-control btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
