--- a/frontend/ecommerce/src/app/pages/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/compras/compras.component.html
@@ -44,7 +44,7 @@
 
   </div>
 
-  <div style="margin-left: 19%;">
+  <div class="div-cuerpo">
 
     <div class="div-busqueda input-group md-form form-sm form-2 pl-0 ">
       <input class="form-control barra-busqueda" type="text" placeholder="Buscar..." aria-label="Search">
@@ -59,7 +59,7 @@
             <img src="assets/img/alienware15.jpg" class="estilo-img img-fluid" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -78,7 +78,7 @@
             <img src="assets/img/alienware22.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -98,7 +98,7 @@
             <img src="assets/img/alienware51.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -118,7 +118,7 @@
             <img src="assets/img/asus-tuf.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -138,7 +138,7 @@
             <img src="assets/img/laptop21.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -157,7 +157,7 @@
             <img src="assets/img/rel12.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -177,7 +177,7 @@
             <img src="assets/img/alienware22.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -197,7 +197,7 @@
             <img src="assets/img/alienware51.jpg" class="estilo-img" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
@@ -217,7 +217,7 @@
             <img src="assets/img/alienware15.jpg" class="estilo-img img-fluid" alt="">
           </div>
         </a>
-        <div class="contenedor-desc flip-card">
+        <div class=" flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <label for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</label>
