--- a/frontend/ecommerce/src/app/pages/detalle-producto/detalle-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/detalle-producto/detalle-producto.component.html
@@ -2,12 +2,12 @@
 
   <div class="row">
 
-    <div class="col-7" >
+    <div class="col-sm-7 col-md-7 col-lg-7 col-12" >
       <div class="contenedor-img">
         <img src="assets/img/alienware15.jpg" class="estilo-img img-fluid" alt="">
       </div>
     </div>
-    <div class="col-5">
+    <div class="col-sm-5 col-md-5 col-lg-5 col-12">
       <div>
         <h3 for="" class="label-desc">Computadora Gaming Core i7 Novena generacion</h3>
         <hr>
@@ -36,10 +36,10 @@
     Carrusel aqui
   </div>
 
-  <div style="margin-top:50px ;">
+  <div style="margin-top:50px;">
     <h3>CARACTERISTICAS</h3>
 
-    <table style="width: 400px;">
+    <table class="tabla-caracteristicas">
       <tr>
         <th>Marca</th>
         <td>Asus</td>
@@ -76,4 +76,5 @@
        Quaerat similique placeat sed, distinctio
        recusandae quas maxime blanditiis!</p>
   </div>
+
 </div>
