--- a/frontend/ecommerce/src/app/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<footer class="page-footer font-small blue pt-4" style="background-color: #1E4B82;color: white;">
+<footer class="page-footer font-small blue pt-4" style="background-color:#ef7828;color:black;">
 
     <!-- Footer Links -->
     <div class="container-fluid text-center text-md-left">
