lazy loading in urls
Cambio al sistema de rutas

--- a/frontend/ecommerce/src/app/pages/home/home.component.html
+++ b/frontend/ecommerce/src/app/pages/home/home.component.html
@@ -1,10 +1,8 @@
 <app-navbar></app-navbar>
 
-<div class="categories">
-  <h3 class="categories__title">Más Vendidos</h3>
-  <app-carousel></app-carousel>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
 </div>
-<br>
-<br>
+
 <app-footer></app-footer>
 
