--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -8,15 +8,15 @@
               <div class="menu-wrapper">
                   <!-- Logo -->
                   <div class="logo">
-                      <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                      <a routerLink="/home"><img src="assets/img/logo/logo.png" alt=""></a>
                   </div>
                   <!-- Main-menu -->
                   <div class="main-menu d-none d-lg-block">
                       <nav>
                           <ul id="navigation">
-                              <li><a routerLink="/inicio">Inicio</a></li>
+                              <li><a routerLink="/">Inicio</a></li>
                               <li><a routerLink="/compras" >Comprar</a></li>
-                              <li><a href="about.html">Conocenos</a></li>
+                              <li><a>Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
                                       <li><a href="shop.html"> Mas vendidos</a></li>
@@ -29,7 +29,7 @@
                                       <li><a href="blog-details.html">Blog Details</a></li>
                                   </ul>
                               </li>
-                              <li *ngIf="!auth.estaAutenticado()" ><a routerLink="login">Registrarse / Acceder</a></li>
+                              <li *ngIf="!auth.estaAutenticado()" ><a routerLink="/login">Registrarse / Acceder</a></li>
                           </ul>
                       </nav>
                   </div>
@@ -37,10 +37,10 @@
                   <div class="main-menu div-perfil" *ngIf="auth.estaAutenticado()">
 
                     <ul>
-                      <li><a routerLink="perfil"><img src="assets/icons/usuario.png" width="30px" alt=""></a>
+                      <li><a routerLink="/perfil"><img src="assets/icons/usuario.png" width="30px" alt=""></a>
                         <ul class="submenu">
-                            <li><a routerLink="perfil">Perfil</a></li>
-                            <li><a routerLink="my_products">Mis Productos</a></li>
+                            <li><a routerLink="/perfil">Perfil</a></li>
+                            <li><a routerLink="/misProductos">Mis Productos</a></li>
                             <li><a class="btn btn-outline-danger" (click)="salir()">Cerrar Sesión</a></li>
                         </ul>
                       </li>
@@ -69,4 +69,4 @@
   </div>
   <!-- Header End -->
 </header>
-<router-outlet></router-outlet>
+
