correccion de productos

--- a/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
@@ -26,8 +26,7 @@
  
 </section></div> 
 
-
-<!--div class="container-fluid">
+<div class="container-fluid">
   <div class="row">
     <h1 class="text-left pb-3 texto col-md-10 pl-5">Mis Productos</h1>
     <div class="col-md-2"><app-create></app-create></div> 
@@ -48,5 +47,5 @@
     </div>
     
   </div>
-</div-->
+</div>
     
