--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -53,7 +53,7 @@
     <div class="row" style="margin-right: 1%;">
 
       <div class="col-lg-4 col-md-4 col-sm-6 col-6 columnas">
-        <a routerLink="/detalle">
+        <a routerLink="detalle">
           <div class="contenedor-img text-center">
             <img src="assets/img/alienware15.jpg" class="estilo-img img-fluid" alt="">
           </div>
