--- a/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/panelAdmin/sidebar/sidebar.component.html
@@ -8,33 +8,29 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-                        <img src="" alt="user" />
-                        <span class="hide-menu"> AS </span>
-                    </a>
+                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><img
+                            src="../assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs
+                        </span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a routerLinkActive="active" routerLink="/perfil">Perfil </a></li>
-                        <li><a href="javascript:void()">My Balance</a></li>
-                        <li><a href="javascript:void()">Inbox</a></li>
-                        <li><a>Account Setting</a></li>
-                        <li><a (click)="auth.logoutUser()" class="pointer">Logout</a></li>
+                        <li><a href="javascript:void()">My Profile </a></li>
+                        <li><a href="javascript:void()">Account Setting</a></li>
+                        <li><a href="javascript:void()">Logout</a></li>
                     </ul>
                 </li>
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
-
-
-                <li *ngFor="let menu of _sidebar.menu">
-                    <a class="has-arrow waves-effect waves-dark" aria-expanded="false"><i [class]="menu.icono"></i><span class="hide-menu"> {{ menu.titulo }} <span class="label label-rouded label-themecolor pull-right"> {{ menu.submenu.length }} </span></span></a>
+                <li> <a class="has-arrow waves-effect waves-dark" aria-expanded="false">
+                    <i class="mdi mdi-gauge"></i>
+                    <span class="hide-menu">Administrativo
+                        <span class="label label-rouded label-themecolor pull-right">
+                            4
+                        </span>
+                    </span></a>
                     <ul aria-expanded="false" class="collapse">
-
-                        <li *ngFor="let submenu of menu.submenu">
-                            <a routerLinkActive="active" [routerLink]="[ submenu.url ]"> {{ submenu.titulo }} </a>
-                        </li>
-
-                        <!-- <li><a href="index2.html">Analytical</a></li>
-                        <li><a href="index3.html">Demographical</a></li>
-                        <li><a href="index4.html">Modern</a></li> -->
+                        <li><a>Cuentas</a></li>
+                        <li><a>Productos</a></li>
+                        <li><a>Servicios</a></li>
+                        <li><a>Modern</a></li>
                     </ul>
                 </li>
 
