--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                           <ul id="navigation">
                               <li><a routerLink="/">Inicio</a></li>
                               <li><a routerLink="/compras" >Comprar</a></li>
-                              <li><a>Conocenos</a></li>
+                              <li><a routerLink="informacion">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
                                       <li><a href="shop.html"> Mas vendidos</a></li>
