--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -28,9 +28,9 @@
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-four">
           <h2>Contactanos</h2>
           <p>Envia tus comentarios y solicitudes</p>
-          <form action="">
+          <form action="#">
             <input type="email" class="form form-control">
-            <input type="submit" value="Suscribe" class="form form-control">
+            <input type="submit" value="Enviar" class="form form-control">
           </form>
           
         </div>
