Parte del landing
perrous

--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -8,13 +8,13 @@
               <div class="menu-wrapper">
                   <!-- Logo -->
                   <div class="logo">
-                      <a routerLink="/home"><img src="assets/img/logo/logo.png" alt=""></a>
+                      <a routerLink="/landing"><img src="assets/img/Logo.jpg" alt=""></a>
                   </div>
                   <!-- Main-menu -->
                   <div class="main-menu d-none d-lg-block">
                       <nav>
                           <ul id="navigation">
-                              <li><a routerLink="/">Inicio</a></li>
+                              <li><a routerLink="/landing">Inicio</a></li>
                               <li><a routerLink="/compras" >Comprar</a></li>
                               <li><a routerLink="informacion">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
