--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -1,81 +1,44 @@
-<!-- Footer -->
-<footer class="footer page-footer font-small blue pt-4 mt-5" >
-
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left" >
-  
-      <!-- Grid row -->
+<footer id="footerId">
+  <div class="footer-top">
+    <div class="container">
       <div class="row">
-  
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3" >
-  
-          <!-- Content -->
-          <h4 class="text-uppercase">Phoenix Store</h4>
-          <p>¡Somos tu mejor opcion en compras en linea!</p>
+        <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-one">
+          <h3>Phoenix Store</h3>
+          <p>"Por que lo mas importante siempre son nuestros clientes"</p>
           <img src="assets/icons/Logotype.jpg" class="logo__footer" alt="logo">
         </div>
-        
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none pb-3">
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">Compras</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Registrate</a>
-            </li>
-            <li>
-              <a href="#!">Comprar</a>
-            </li>
-            <li>
-              <a href="#!">Ofertas</a>
-            </li>
-           
+        <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-two">
+          <h2>Navega ya!</h2>
+          <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Compras</a></li>
+            <li><a href="">Conocenos</a></li>
+            <li><a href="">Ofertas</a></li>
+            <li><a href="">Blog</a></li>
           </ul>
-  
         </div>
-        <!-- Grid column -->
-  
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-  
-          <!-- Links -->
-          <h5 class="text-uppercase">¡Conocenos!</h5>
-  
-          <ul class="list-unstyled">
-            <li>
-              <a href="#!">Acerca de</a>
-            </li>
-            <li>
-              <a href="#!">Misión</a>
-            </li>
-            <li>
-              <a href="#!">Visión</a>
-            </li>
-           
-          </ul>
-  
+        <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-three">
+          <h2>Siguenos:</h2>
+          <p>Apresurate y se parte de la familia del Fenix, te esperamos, por que eres tu quien mueve esta empresa. </p>
+          <a href=""><i class="fa fa-facebook"></i></a>
+          <a href=""><i class="fa fa-twitter"></i></a>
+          <a href=""><i class="fa fa-linkedin"></i></a>
+          <a href=""><i class="fa fa-pinterest"></i></a>
         </div>
-        <!-- Grid column -->
-  
+        <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-four">
+          <h2>Contactanos</h2>
+          <p>Envia tus comentarios y solicitudes</p>
+          <form action="#">
+            <input type="email" class="form form-control">
+            <input type="submit" value="Enviar" class="form form-control">
+          </form>
+          
+        </div>
       </div>
-      <!-- Grid row -->
-  
     </div>
-    <!-- Footer Links -->
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3" >© 2020 Industria de Software:
-      <a href="PhoenixStore.com" class="copyright">UNAH, Ingenieria en Sistemas. </a>
-    </div>
-    <!-- Copyright -->
-    
+  </div>
+  <p class="footer-bottom-text">
+    Todos los derechos reservados por &copy; Phoenix Store. 2020
+  </p>
 </footer>
   
-
