--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.css
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.css
@@ -13,8 +13,9 @@ h2{
 
 .footer-top{
     background: #111 ;
-    padding: 60px 0;
+    padding: 40px 0;
     margin-bottom: 0px;
+    margin-top: 5%;
 }
 
 .segment-one h3{
@@ -97,6 +98,7 @@ h2{
     padding: 3px 15px;
     color: #fff;
     text-transform: uppercase;
+    
 }
 
 .footer-bottom-text{
@@ -110,6 +112,9 @@ h2{
     bottom: 0;
     width: 100%;
     height: 2.5rem;
+    margin-bottom: -10px;
+    z-index: 100;
+   
 }
 .logo__footer{
     margin-top: 0px;
