--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-one">
           <h3>Phoenix Store</h3>
           <p>"Por que lo mas importante siempre son nuestros clientes"</p>
-          <img src="assets/icons/Logotype.jpg" class="logo__footer" alt="logo">
+          <img src="assets/icons/Logotype.png" class="logo__footer" alt="logo">
         </div>
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-two">
           <h2>Navega ya!</h2>
