--- a/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
+++ b/frontend/ecommerce/src/app/pages/home/compras/compras.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-bottom: 50px;">
   <div class="sidenav d-sm-none d-md-block d-none d-sm-block" style="background-color: rgb(246, 254, 255);">
     <p>
       <a class="" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -233,4 +233,5 @@
     </div>
   </div>
 
+  <router-outlet></router-outlet>
 </div>
