--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -8,15 +8,15 @@
               <div class="menu-wrapper">
                   <!-- Logo -->
                   <div class="logo">
-                      <a routerLink="/landing"><img src="assets/img/Logo.jpg" alt=""></a>
+                      <a routerLink="/"><img src="assets/img/Logo.jpg" alt=""></a>
                   </div>
                   <!-- Main-menu -->
                   <div class="main-menu d-none d-lg-block">
                       <nav>
                           <ul id="navigation">
-                              <li><a routerLink="/landing">Inicio</a></li>
-                              <li><a routerLink="/compras" >Comprar</a></li>
-                              <li><a routerLink="informacion">Conocenos</a></li>
+                              <li><a routerLinkActive="active" routerLink="/">Inicio</a></li>
+                              <li><a routerLinkActive="active" routerLink="/compras" >Comprar</a></li>
+                              <li><a routerLinkActive="active" routerLink="/informacion">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
                                       <li><a href="shop.html"> Mas vendidos</a></li>
