--- a/frontend/ecommerce/src/app/pages/home/home.component.html
+++ b/frontend/ecommerce/src/app/pages/home/home.component.html
@@ -3,5 +3,14 @@
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
+
+<app-box-cards></app-box-cards>
+
+<div class="barra" >
+    <h1 class="text-center py-3">PRODUCTOS DESTACADOS</h1>
+</div>  
+
+<app-corousel-cards></app-corousel-cards>       
+
 <app-footer></app-footer>
 
