--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -19,14 +19,14 @@
                               <li><a routerLinkActive="active" routerLink="/informacion">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
-                                      <li><a href="shop.html"> Mas vendidos</a></li>
-                                      <li><a href="product_details.html"> Novedades</a></li>
+                                      <li><a routerLink="/"> Mas vendidos</a></li>
+                                      <li><a routerLink="/"> Novedades</a></li>
                                   </ul>
                               </li>
-                              <li><a href="blog.html">Blog</a>
+                              <li><a href="/">Blog</a>
                                   <ul class="submenu">
-                                      <li><a href="blog.html">Blog</a></li>
-                                      <li><a href="blog-details.html">Blog Details</a></li>
+                                      <li><a routerLink="/">Blog</a></li>
+                                      <li><a routerLink="/">Blog Details</a></li>
                                   </ul>
                               </li>
                               <!-- <li *ngIf="!auth.estaAutenticado()" ><a routerLink="/login">Registrarse / Acceder</a></li> -->
