mario no hagas commit xd

--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -8,25 +8,25 @@
               <div class="menu-wrapper">
                   <!-- Logo -->
                   <div class="logo">
-                      <a routerLink="/"><img src="assets/img/Logo.jpg" alt=""></a>
+                      <a routerLink="/landing"><img src="assets/img/Logo.jpg" alt=""></a>
                   </div>
                   <!-- Main-menu -->
                   <div class="main-menu d-none d-lg-block">
                       <nav>
                           <ul id="navigation">
-                              <li><a routerLinkActive="active" routerLink="/">Inicio</a></li>
+                              <li><a routerLinkActive="active" routerLink="/landing">Inicio</a></li>
                               <li><a routerLinkActive="active" routerLink="/compras" >Comprar</a></li>
                               <li><a routerLinkActive="active" routerLink="/informacion">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
-                                      <li><a routerLink="/"> Mas vendidos</a></li>
-                                      <li><a routerLink="/"> Novedades</a></li>
+                                      <li><a routerLink="/landing"> Mas vendidos</a></li>
+                                      <li><a routerLink="/landing"> Novedades</a></li>
                                   </ul>
                               </li>
-                              <li><a href="/">Blog</a>
+                              <li><a href="/landing">Blog</a>
                                   <ul class="submenu">
-                                      <li><a routerLink="/">Blog</a></li>
-                                      <li><a routerLink="/">Blog Details</a></li>
+                                      <li><a routerLink="/landing">Blog</a></li>
+                                      <li><a routerLink="/landing">Blog Details</a></li>
                                   </ul>
                               </li>
                               <!-- <li *ngIf="!auth.estaAutenticado()" ><a routerLink="/login">Registrarse / Acceder</a></li> -->
