child routes actualizado
nuevas caracteristicas de angular 10

--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                           <ul id="navigation">
                               <li><a routerLinkActive="active" routerLink="/landing">Inicio</a></li>
                               <li><a routerLinkActive="active" routerLink="/compras" >Comprar</a></li>
-                              <li><a routerLinkActive="active" routerLink="/informacion">Conocenos</a></li>
+                              <li><a routerLinkActive="active" routerLink="/about">Conocenos</a></li>
                               <li class="hot"><a href="#">Ofertas</a>
                                   <ul class="submenu">
                                       <li><a routerLink="/landing"> Mas vendidos</a></li>
