--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
@@ -24,9 +24,9 @@
                     </div>
                     <div class="col mb-2">
                         <div class="text-right">
-                            <button class="btn btn-primary">
+                            <a class="btn btn-primary" routerLink='cuenta'>
                                 Crear Cuenta
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                         <tr>
                             <th class="w100">Foto</th>
                             <th>Nombre</th>
-                            <th>Apellido</th>
+                            <th>Telefono</th>
                             <th>Correo</th>
                             <th>Rol</th>
                             <th class="w100 text-nowrap">Acciones</th>
@@ -47,7 +47,7 @@
                         <tr>
                             <td></td>
                             <td>Nombre</td>
-                            <td>Apellido</td>
+                            <td>Telefono</td>
                             <td>Correo</td>
                             <td>Rol</td>
                             
