formulario de productos

--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
@@ -2,9 +2,9 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Cuenta</h4>
+                <h4 class="card-title">Producto</h4>
                 <hr>
-                <h6 class="card-subtitle">Crear cuenta</h6>
+                <h6 class="card-subtitle">Crear producto</h6>
                 <form action="" class="form-horizontal p-t-20">
                     <div class="form-group row">
                         <label for="" class=" col-sm-3 control-label">Nombre</label>
@@ -49,8 +49,8 @@
     <div class="col animated fadeIn fast">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Imagen de Usuario</h4>
-                <img src="assets/images/users/1.jpg" alt="" class="img-thumbnail">
+                <h4 class="card-title">Imagen de Producto</h4>
+                <img src="assets/img/alienware15.jpg" alt="" class="img-thumbnail">
             </div>
         </div>
     </div>
