--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/gestion-productos.component.html
@@ -24,9 +24,10 @@
                     </div>
                     <div class="col mb-2">
                         <div class="text-right">
-                            <button class="btn btn-primary">
+                            <a class="btn btn-primary"
+                                routerLink="producto">
                                 Crear Producto
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
