--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
@@ -20,7 +20,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-8">
-                        <h4 class="card-title">Cuentas (3)</h4>
+                        <h4 class="card-title">Cuentas ({{ cuentas.length }})</h4>
                     </div>
                     <div class="col mb-2">
                         <div class="text-right">
@@ -44,12 +44,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td></td>
-                            <td>Nombre</td>
-                            <td>Telefono</td>
-                            <td>Correo</td>
-                            <td>Rol</td>
+                        <tr *ngFor="let cuenta of cuentas">
+                            <td *ngFor="let img of image">
+                                <img [src]="img.img_route" class="w100 cursor" alt="userImg" style="width: 45px; height: 45px;">
+                            </td>
+                            <td>{{cuenta.first_name}} {{ cuenta.last_name }}</td>
+                            <td>{{cuenta.phone_number}}</td>
+                            <td>{{cuenta.email}}</td>
+                            <td *ngIf="cuenta.is_active">USER NORMAL</td>
+                            <td *ngIf="cuenta.is_admin">ADMIN</td>
                             
                             <td class="text-nowrap text-center">
                                 <a 
