--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-productos/crear-producto/crear-producto.component.html
@@ -32,6 +32,18 @@
                         </div>
                     </div>
 
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label">Categoría</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <select class="form-control" name="">
+                                    <option value="">Seleccione la Categoria</option>
+                                    <option value="">1</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="form-group row m-b-0">
                         <div class="offset-sm-3 col-sm-9">
                             <button type="submit"
