--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.css
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.css
@@ -334,3 +334,10 @@
   border-color: #f3ab71 !important ;
   box-shadow: 0 0 0 0.2rem rgba(255, 72, 0, 0.25);
 }
+
+.logo{
+  width: 17%;
+  display: initial;
+  justify-content: space-between;
+  margin-top: -30px;
+}
