template en proceso/offers

--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -17,10 +17,10 @@
                               <li><a routerLinkActive="active" routerLink="/landing">Inicio</a></li>
                               <li><a routerLinkActive="active" routerLink="/compras" >Comprar</a></li>
                               <li><a routerLinkActive="active" routerLink="/about">Conocenos</a></li>
-                              <li class="hot"><a href="#">Ofertas</a>
+                              <li class="hot"><a href="">Novedades</a>
                                   <ul class="submenu">
+                                      <li><a routerLinkActive="active" routerLink="/offers">Ofertas</a></li>
                                       <li><a routerLink="/landing"> Mas vendidos</a></li>
-                                      <li><a routerLink="/landing"> Novedades</a></li>
                                   </ul>
                               </li>
                               <li><a href="/landing">Blog</a>
