--- a/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.css
+++ b/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.css
@@ -1,3 +1,44 @@
 .containerSlide {
     margin-top: -10px;
 }
+
+.corousel-caption {
+    position: absolute;
+    z-index: 100;
+    display:table;
+    margin-left: 1rem;
+    margin-top: 2.5rem;
+    width: 100%;
+    height: 150%;
+    font-size: 30px;
+}
+ 
+.example_a {
+    color: #fff !important;
+    text-decoration: none;
+    background: #ed3330;
+    padding: 10px;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+    transition: all 0.4s ease 0s;
+    font-size: small;
+    position: absolute;
+    z-index: 100;
+    margin-left: 2.5rem;
+    margin-top: 15%;
+    width: 15%;
+    font-size: 15px;
+}
+
+.example_a:hover {
+    background: #434343;
+    letter-spacing: 1px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+    width: 17%;
+    border-radius: 8px;
+    font-size: 15px;
+}
