--- a/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.html
+++ b/frontend/ecommerce/src/app/components/shared/corousel-img/corousel-img.component.html
@@ -3,7 +3,7 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/slide1.jpg" class="d-block w-100 shadow" alt="">
+              <img src="assets/img/slide1.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
               <img src="assets/img/slide2.jpg" class="d-block w-100" alt="" >
@@ -12,15 +12,21 @@
               <img src="assets/img/slide4.jpg" class="d-block w-100" alt="">
             </div>
             <div class="carousel-item">
+              <div class="corousel-caption">
+                <p>Encuentra ofertas hasta por 99% de descuento</p>
+                    <h1>¡Compruebalo!</h1>
+              </div>
+              <div class="button_cont">
+                <a class="example_a" routerLinkActive="active" routerLink="/offers"
+                target="_blank" rel="nofollow noopener">compra desde aqui</a>
+              </div>
                 <img src="assets/img/slide3.jpg" class="d-block w-100" alt="">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
         </div>
