--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
@@ -5,12 +5,25 @@
                 <h4 class="card-title">Cuenta</h4>
                 <hr>
                 <h6 class="card-subtitle">Crear cuenta</h6>
-                <form action="" class="form-horizontal p-t-20">
+                <div class="alert alert-success" *ngIf="status == 'success'">
+                    <span>{{ message }}</span>
+                </div>
+
+                <form [formGroup]="formAccount" (ngSubmit)="onCrearCuenta()" class="form-horizontal p-t-20">
                     <div class="form-group row">
                         <label for="" class=" col-sm-3 control-label">Nombre</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Nombre">
+                                <input 
+                                    type="text" 
+                                    class="form-control"
+                                    placeholder="Nombre"
+                                    formControlName="name"
+                                    [class.is-invalid]="nombreNoValido">
+
+                                <small *ngIf="nombreNoValido" class="text-danger">
+                                    Ingrese al menos 5 letras
+                                </small>
                             </div>
                         </div>
                     </div>
@@ -18,7 +31,15 @@
                         <label for="" class=" col-sm-3 control-label">Apellido</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Apellido">
+                                <input 
+                                    type="text"
+                                    class="form-control"
+                                    placeholder="Apellido"
+                                    formControlName="apellido"
+                                    [class.is-invalid]="apellidoNoValido">
+                                <small *ngIf="apellidoNoValido" class="text-danger">
+                                    Ingrese el apellido
+                                </small>
                             </div>
                         </div>
                     </div>
@@ -27,7 +48,15 @@
                         <label for="" class=" col-sm-3 control-label">Correo</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="email" class="form-control" placeholder="Email">
+                                <input 
+                                    type="email" 
+                                    class="form-control" 
+                                    placeholder="Email"
+                                    formControlName="correo"
+                                    [class.is-invalid]="correoNoValido">
+                                <small *ngIf="correoNoValido" class="text-danger">
+                                    Ingrese el correo
+                                </small>
                             </div>
                         </div>
                     </div>
@@ -36,16 +65,44 @@
                         <label for="" class=" col-sm-3 control-label">Telefono</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Telefono">
+                                <input 
+                                    type="text" 
+                                    class="form-control" 
+                                    placeholder="Telefono"
+                                    formControlName="telefono">
+                                <small *ngIf="telefonoNoValido" class="text-danger">
+                                    Ingrese un número de telefono válido
+                                </small>
                             </div>
                         </div>
                     </div>
 
                     <div class="form-group row">
-                        <label for="" class=" col-sm-3 control-label">Fecha de Nacimiento</label>
+                        <label class="col-sm-3 control-label">Rol de Usuario</label>
                         <div class="col-sm-9">
                             <div class="input-group">
-                                <input type="date" class="form-control" placeholder="">
+                                <select class="form-control" name="">
+                                    <option value="">Seleccione el rol</option>
+                                    <option value="1">ADMIN</option>
+                                    <option value="2">USER</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="" class="col-sm-3 control-label">Fecha de Nacimiento</label>
+                        <div class="col-sm-9">
+                            <div class="input-group">
+                                <input 
+                                    type="date" 
+                                    class="form-control"
+                                    placeholder=""
+                                    formControlName="fecha_nac"
+                                    [class.is-invalid]="fechaNoValida">
+                                <small *ngIf="fechaNoValida" class="text-danger">
+                                    Ingrese fecha válida
+                                </small>
                             </div>
                         </div>
                     </div>
