--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/crear-cuenta/crear-cuenta.component.html
@@ -83,8 +83,8 @@
                             <div class="input-group">
                                 <select class="form-control" name="">
                                     <option value="">Seleccione el rol</option>
-                                    <option value="1">ADMIN</option>
-                                    <option value="2">USER</option>
+                                    <option *ngFor="rol of roles" [ngValue]="rol">{{rol}}</option>
+                                   
                                 </select>
                             </div>
                         </div>
