--- a/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
+++ b/frontend/ecommerce/src/app/pages/panel-admin/gestion-cuentas/gestion-cuentas.component.html
@@ -74,6 +74,11 @@
                     </tbody>
                 </table>
             </div>
+            <div *ngIf="txtTermino.value.length === 0">
+                <button (click)="cambiarPagina(-4)" class="btn btn-secondary">Anteriores</button>
+                &nbsp;
+                <button (click)="cambiarPagina(3)" class="btn btn-secondary">Siguientes</button>
+            </div>
             </div>
         </div>
     </div>
