--- a/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
+++ b/frontend/ecommerce/src/app/pages/home/products/myproducts/myproducts.component.html
@@ -1,6 +1,4 @@
-
-
-<div class="container-fluid pt-0">
+<!--div class="container-fluid pt-0">
 <section id="galeria" class="p-0 m-0">
   <div class="text-center ">
     <div class="row">
@@ -25,7 +23,8 @@
     </div>
   </div>
  
-</section></div> 
+</section></div--> 
+
 
 <div class="container-fluid">
   <div class="row">
@@ -33,7 +32,11 @@
     <div class="col-md-2"><app-create></app-create></div> 
     
     <div class="card bg-dark text-white text-left col-md-3 mb-3 ml-5 mr-5 p-0 " style="width: 16rem;" *ngFor="let product of products ">
-      <img class="card-img" src="{{imagen_producto}}" class="img-fluid" alt="Card image">
+      <div *ngFor="let image of products_images ">
+        <div *ngIf="product.id==image.product_id.id">
+          <img src="{{image.images_id.img_route}}" alt="" class="img-fluid" alt="Card image" >
+        </div>
+      </div>
       <div class="card-img-overlay ">
         <p class="card-title pb-0">{{product.name}} &nbsp; 
           <app-update [product]="product"></app-update>
@@ -47,23 +50,6 @@
       </div>
     </div>
     
-
-    <!---Example-->
-    <div class="card bg-dark text-white text-left col-md-3 mb-3 ml-5 mr-5 p-0 " style="width: 16rem;  ">
-      <img class="card-img" src="{{imagen_producto}}" class="img-fluid" alt="Card image">
-      <div class="card-img-overlay ">
-        <p class="card-title pb-0">Nombre &nbsp; 
-          <app-update ></app-update>
-          <app-delete ></app-delete>
-        </p>
-
-      </div>
-      <div class="card-body">
-        <p class="m-0 pb-0">Descripcion</p>
-        <p class="m-0 pb-0"><strong>Datos extra </strong> </p>
-      </div>
-    </div>
-    <!--End Example-->
   </div>
 </div>
     
