--- a/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
+++ b/frontend/ecommerce/src/app/components/shared/navbar/navbar.component.html
@@ -29,28 +29,22 @@
                                       <li><a routerLink="/landing">Blog Details</a></li>
                                   </ul>
                               </li>
+                              <li  class="main-menu div-perfil" *ngIf="!auth.estaAutenticado()">
+                                <a routerLink="/login">Registrarse / Acceder</a>
+                              </li>
+                              <li class="main-menu div-perfil" *ngIf="auth.estaAutenticado()">
+                                <a class="perfil-log" routerLink="/perfil"><img src="assets/icons/user.png" width="30px" height="30" alt=""></a>
+                                <ul class="submenu">
+                                    <li><a routerLink="login">Inicia Sesion</a></li>
+                                    <li><a routerLink="usuario" >Usuario</a></li>
+                                    <li><a routerLink="my_products">Mis Productos</a></li>
+                                </ul>
+                              </li>
                               <!-- <li *ngIf="!auth.estaAutenticado()" ><a routerLink="/login">Registrarse / Acceder</a></li> -->
                           </ul>
                       </nav>
                   </div>
-
-                  <!-- Header Right -->
-                  <div class="main-menu div-perfil" *ngIf="!auth.estaAutenticado()">
-                    <ul>
-                      <li><a routerLink="/login">Registrarse / Acceder</a></li>
-                    </ul>
-                  </div>
-
-                  <div class="main-menu div-perfil" *ngIf="auth.estaAutenticado()">
-                    <ul>
-                      <li><a routerLink="/perfil"><img src="assets/icons/usuario.png" width="30px" alt=""></a>
-                        <ul class="submenu">
-                            <li><a routerLink="login">Inicia Sesion</a></li>
-                            <li><a routerLink="usuario" >Usuario</a></li>
-                            <li><a routerLink="my_products">Mis Productos</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+                  
 
                      <!--  <span class="iconos-navbar">
                         <a href="index.html" ><img src="assets/icons/usuario.png" width="30px" alt="">
@@ -64,7 +58,7 @@
                         <a href="index.html"><img src="assets/icons/supermercado.png" width="30px" alt=""></a>
                       </span> -->
 
-                  </div>
+                  
               </div>
               <!-- Mobile Menu -->
               <div class="col-12">
