--- a/frontend/ecommerce/src/app/components/shared/cards/cards.component.html
+++ b/frontend/ecommerce/src/app/components/shared/cards/cards.component.html
@@ -34,7 +34,7 @@
         <div class="col-3 ">
           <img src="assets/icons/imagen5.jpg" class="d-block w-100 h-70 shadow" alt="alexa">
            <label>Iphone 11 256GB</label><br>
-          <strong>HNL. 20,000L></strong>
+          <strong>HNL. 20,000L</strong>
          </div>
          <!--Segunda Card-->
         <div  class="col-3 ">
