--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -10,9 +10,9 @@
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-two">
           <h2>Navega ya!</h2>
           <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Compras</a></li>
-            <li><a href="">Conocenos</a></li>
+            <li><a href="/landing">Inicio</a></li>
+            <li><a  href="/compras">Compras</a></li>
+            <li><span > <a href="/about">Conocenos</a></span></li>
             <li><a href="">Ofertas</a></li>
             <li><a href="">Blog</a></li>
           </ul>
@@ -41,4 +41,3 @@
     Todos los derechos reservados por &copy; Phoenix Store. 2020
   </p>
 </footer>
-  
