--- a/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
+++ b/frontend/ecommerce/src/app/pages/home/informacion/informacion.component.html
@@ -2,9 +2,9 @@
 <div class="card bg-dark text-white" style="text-align: center;padding-top: 0px ;padding-bottom: 0px;">
     <img src="assets/icons/fondo.jpg" class="card-img" alt="..." height="400px" >
     <div class="card-img-overlay" style="padding-top: 50px;">
-      <p class="card-title" style="color: whitesmoke; font-size: 70px;font-size: calc(1em + 1vw)"><b><br>¿QUIENES SOMOS?</b></p>
-      <p style="color:whitesmoke;  font-size: 50px;font-size: calc(1em + 1vw)"><b>¡Somos tu mejor opción en compras en línea!<br>Brindandote una alta gama de productos a tu alcance.</b></p> <br>
-     <p style="color:whitesmoke;  font-size: 50px;font-size: calc(1em + 1vw)"> <b>¡SOMOS PHOENIX STORE!</b><img src="assets/icons/Logotype.png" class="logo__footer" alt="logo" style="height: 70px;width: 100px;"></p>
+      <p class="card-title" style="color: black; font-size: 70px;font-size: calc(1em + 1vw)"><b><br>¿QUIENES SOMOS?</b></p>
+      <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"><b>¡Somos tu mejor opción en compras en línea!<br>Brindandote una alta gama de productos a tu alcance.</b></p> <br>
+     <p style="color:black;  font-size: 50px;font-size: calc(1em + 1vw)"> <b>¡SOMOS PHOENIX STORE!</b><img src="assets/icons/Logotype.png" class="logo__footer" alt="logo" style="height: 70px;width: 100px;"></p>
     </div>
   </div>
 
