--- a/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
+++ b/frontend/ecommerce/src/app/components/shared/footer/footer.component.html
@@ -14,7 +14,7 @@
             <li><a  href="/compras">Compras</a></li>
             <li><span > <a href="/about">Conocenos</a></span></li>
             <li><a href="">Ofertas</a></li>
-            <li><a href="">Blog</a></li>
+            <li><a href="/login">¡Registrate!</a></li>
           </ul>
         </div>
         <div class="col-md-3 col-sm-6 col-sx-12 md-mb-30 sm-mb-30 segment-three">
